--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="cursor-follower"></div>
 
     <nav>
-      <a href="#home" class="logo">Portfolio</a>
+      <a href="#home" class="logo">MS</a>
       <div class="menu-toggle">
         <i class="fas fa-bars"></i>
       </div>
