added logo animations

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <div class="cursor-follower"></div>
 
     <nav>
-      <a href="#home" class="logo">MS</a>
+      <!-- <a href="#home" class="logo">MS</a> -->
+       
+          <div class="logo" id="logo"></div>
+       
       <div class="menu-toggle">
         <i class="fas fa-bars"></i>
       </div>
