updated profile photo

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div class="home-image">
-        <img src="../asset/Images/Profile Photo.jpg" alt="Profile Picture" />
+        <img src="../asset/Images/Profile_Photo.jpg" alt="Profile Picture" />
       </div>
     </section>
 
