--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div class="home-image">
-        <img src="../asset/Images/Profile_Photo.jpg" alt="Profile Picture" />
+        <img src="asset/images/profile_photo.jpg" alt="Profile Picture" />
       </div>
     </section>
 
@@ -159,7 +159,7 @@
         <div class="project-card">
           <div class="project-img">
             <img
-              src="../asset/Images/portfoliowebpage.jpg"
+              src="asset/images/portfoliowebpage.jpg"
               alt="Portfolio Website"
             />
           </div>
@@ -179,7 +179,7 @@
         <div class="project-card">
           <div class="project-img">
             <img
-              src="../asset/Images/supply_chain_manage.jpg"
+              src="asset/images/supply_chain_manage.jpg"
               alt="Supply Chain Management"
             />
           </div>
@@ -199,7 +199,7 @@
         <div class="project-card">
           <div class="project-img">
             <img
-              src="../asset/Images/online_delivery_application.jpg"
+              src="asset/images/online_delivery_application.jpg"
               alt="Online Delivery Application"
             />
           </div>
@@ -220,7 +220,7 @@
 
         <div class="project-card">
           <div class="project-img">
-            <img src="../asset/Images/blinkit.jpg" alt="Blinkit Clone" />
+            <img src="asset/images/blinkit.jpg" alt="Blinkit Clone" />
           </div>
           <div class="project-info">
              <h3>Blinkit Clone</h3>
@@ -239,7 +239,7 @@
 
         <div class="project-card">
           <div class="project-img">
-            <img src="../asset/Images/apple_website.jpg" alt="Apple Website Clone" />
+            <img src="asset/images/apple_website.jpg" alt="Apple Website Clone" />
           </div>
           <div class="project-info">
             <h3>Apple Website Clone</h3>
@@ -256,7 +256,7 @@
 
         <div class="project-card">
           <div class="project-img">
-            <img src="../asset/Images/swiggy+zomato.jpg" alt="Swiggato"/>
+            <img src="asset/images/swiggy+zomato.jpg" alt="Swiggato"/>
           </div>
           <div class="project-info">
             <h3>Swiggato</h3>
@@ -273,7 +273,7 @@
 
         <div class="project-card">
           <div class="project-img">
-            <img src="../asset/Images/Library_management_system.jpg" alt="Library Management System" />
+            <img src="asset/images/Library_management_system.jpg" alt="Library Management System" />
           </div>
           <div class="project-info">
             <h3>Library Management System</h3>
