added download resume button

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <p>Responsive Design</p>
             </div>
           </div>
-          <a href="" class="btn" style="margin-top: 30px">Download Resume</a>
+          <a href="asset/M_Sharook_Resume__.pdf" download="M_Sharook_Resume__.pdf" class="btn" style="margin-top: 30px">Download Resume</a>
         </div>
       </div>
     </section>
@@ -270,7 +270,7 @@
           </div>
           </div>
         </div>
-        
+
         <div class="project-card">
           <div class="project-img">
             <img src="asset/images/library_management_system.jpg" alt="Library Management System" />
